--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
-    "express": "^4.16.3",
+    "express": "4.16.4",
     "mongoose": "^5.1.3",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
