--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "form": "^0.2.4",
     "materialize-css": "^0.100.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
@@ -19,7 +20,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-stripe-checkout": "^2.6.3",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
+    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "url-parse": "^1.4.3"
   },
