--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "4.16.4",
     "localtunnel": "^1.9.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.1.3",
     "nodemon": "^1.17.5",
+    "parser": "^0.1.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "path": "^0.12.7",
+    "path-parser": "^4.2.0",
     "sendgrid": "^5.2.3",
     "stripe": "^6.12.1",
     "url-parse": "^1.4.3"
