--- a/client/package.json
+++ b/client/package.json
@@ -11,24 +11,35 @@
     }
   },
   "dependencies": {
+    "ajv": "^6.6.1",
     "axios": "^0.18.0",
+    "exec-sh": "^0.3.2",
     "form": "^0.2.4",
-    "materialize-css": "^0.100.2",
+    "materialize-css": "^1.0.0",
+    "merge": "^1.2.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
-    "url-parse": "^1.4.3"
+    "url-parse": "^1.4.3",
+    "webpack": "^4.26.1",
+    "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
