--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,7 @@
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
-    "url-parse": "^1.4.3",
-    "webpack": "^4.26.1",
-    "webpack-dev-server": "^3.1.10"
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
